# RetroDroid

./: .gitignore  LICENSE  README.md
App/: settings.gradle.kts
App/app/: build.gradle.kts
App/app/src/androidTest/java/com/loopy/retrodroidapp/: ExampleInstrumentedTest.kt
App/app/src/main/: AndroidManifest.xml
App/app/src/main/JNI/: jni_bridge.cpp
App/app/src/main/cpp/: CMakeLists.txt
App/app/src/main/cpp/Core/: Core.cpp  Core.h  CoreManager.cpp  CoreManager.h
App/app/src/main/cpp/JNI/: jni_bridge.cpp
App/app/src/main/cpp/Logging/: LogManager.cpp  LogManager.h
App/app/src/main/java/com/loopy/retrodroidapp/: MainActivity.kt
App/app/src/main/java/com/loopy/retrodroidapp/ui/theme/: Color.kt  Theme.kt  Type.kt
App/app/src/main/res/values/: strings.xml  themes.xml
App/app/src/test/java/com/loopy/retrodroidapp/: ExampleUnitTest.kt
App/gradle/wrapper/: gradle-wrapper.properties
